@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.common.crypto;
 
@@ -58,7 +44,7 @@ public class BytesEncryptor implements Encryptor<byte[], byte[]> {
   public BytesEncryptor(OperationMode mode, PaddingScheme paddingScheme, String password) {
     this.mode = mode;
     this.password = password;
-    this.transformation = String.format("%s/%s/%s", AES_ALGORITHM, mode, paddingScheme);
+    this.transformation = "%s/%s/%s".formatted(AES_ALGORITHM, mode, paddingScheme);
     this.encryptionSalt = generateRandomBytes(SALT_SIZE);
     this.encryptionKey = newSecretKey(password, this.encryptionSalt);
     this.payloadSize =
