@@ -1,23 +1,11 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.app;
 
+import com.axelor.cache.CacheBuilder;
+import com.axelor.db.audit.HibernateListenerConfigurator;
 import com.axelor.event.EventModule;
 import com.axelor.inject.Beans;
 import com.axelor.inject.logger.LoggerModule;
@@ -30,6 +18,7 @@ import com.axelor.meta.service.ViewProcessor;
 import com.axelor.meta.theme.MetaThemeService;
 import com.axelor.meta.theme.MetaThemeServiceImpl;
 import com.axelor.report.ReportEngineProvider;
+import com.axelor.script.ScriptPolicyConfigurator;
 import com.axelor.ui.QuickMenuCreator;
 import com.google.inject.AbstractModule;
 import com.google.inject.multibindings.Multibinder;
@@ -71,9 +60,8 @@ public class AppModule extends AbstractModule {
     // Init QuickMenuCreator
     Multibinder.newSetBinder(binder(), QuickMenuCreator.class);
 
-    // View processor binder
-    final Multibinder<ViewProcessor> viewProcessorBinder =
-        Multibinder.newSetBinder(binder(), ViewProcessor.class);
+    // Hibernate listener configurator binder
+    Multibinder.newSetBinder(binder(), HibernateListenerConfigurator.class);
 
     bind(AppSettingsObserver.class);
     bind(ViewWatcherObserver.class);
@@ -85,28 +73,37 @@ public class AppModule extends AbstractModule {
             .flatMap(name -> MetaScanner.findSubTypesOf(name, AxelorModule.class).find().stream())
             .collect(Collectors.toList());
 
-    if (moduleClasses.isEmpty()) {
-      return;
-    }
+    if (!moduleClasses.isEmpty()) {
+      log.info("Versión personalizada para educaFlow");
+      log.info("Configuring app modules...");
 
-    log.info("Versión personalizada para educaFlow");
-    log.info("Configuring app modules...");
-
-    for (Class<? extends AxelorModule> module : moduleClasses) {
-      try {
-        log.debug("Configure module: {}", module.getName());
-        install(module.getDeclaredConstructor().newInstance());
-      } catch (Exception e) {
-        throw new RuntimeException(e);
+      for (Class<? extends AxelorModule> module : moduleClasses) {
+        try {
+          log.debug("Configure module: {}", module.getName());
+          install(module.getDeclaredConstructor().newInstance());
+        } catch (Exception e) {
+          throw new RuntimeException(e);
+        }
       }
     }
 
     // Configure view processors
+    configureViewProcessors();
 
-    final List<Class<? extends ViewProcessor>> viewProcessorClasses =
+    // Configure script policy
+    configureScriptPolicy();
+
+    var cacheProviderInfo = CacheBuilder.getCacheProviderInfo();
+    log.info("Cache provider: {}", cacheProviderInfo.getProvider());
+  }
+
+  private void configureViewProcessors() {
+    Multibinder<ViewProcessor> viewProcessorBinder =
+        Multibinder.newSetBinder(binder(), ViewProcessor.class);
+    List<Class<? extends ViewProcessor>> viewProcessorClasses =
         ModuleManager.getResolution().stream()
             .flatMap(name -> MetaScanner.findSubTypesOf(name, ViewProcessor.class).find().stream())
-            .collect(Collectors.toList());
+            .toList();
 
     if (!viewProcessorClasses.isEmpty()) {
       log.atInfo()
@@ -114,11 +111,40 @@ public class AppModule extends AbstractModule {
           .addArgument(
               () ->
                   viewProcessorClasses.stream()
-                      .map(Class::getSimpleName)
+                      .map(Class::getName)
                       .collect(Collectors.joining(", ")))
           .log();
+
       viewProcessorClasses.forEach(
           viewProcessor -> viewProcessorBinder.addBinding().to(viewProcessor));
+    }
+  }
+
+  private void configureScriptPolicy() {
+    Multibinder<ScriptPolicyConfigurator> scriptPolicyConfiguratorBinder =
+        Multibinder.newSetBinder(binder(), ScriptPolicyConfigurator.class);
+
+    List<Class<? extends ScriptPolicyConfigurator>> configuratorClasses =
+        ModuleManager.getResolution().stream()
+            .flatMap(
+                name ->
+                    MetaScanner.findSubTypesOf(name, ScriptPolicyConfigurator.class)
+                        .find()
+                        .stream())
+            .toList();
+
+    if (!configuratorClasses.isEmpty()) {
+      log.atInfo()
+          .setMessage("Script policy configurators: {}")
+          .addArgument(
+              () ->
+                  configuratorClasses.stream()
+                      .map(Class::getName)
+                      .collect(Collectors.joining(", ")))
+          .log();
+
+      configuratorClasses.forEach(
+          configurator -> scriptPolicyConfiguratorBinder.addBinding().to(configurator));
     }
   }
 }
