@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.auth;
 
@@ -25,9 +11,7 @@ import com.axelor.auth.db.User;
 import com.axelor.auth.db.repo.PasswordResetTokenRepository;
 import com.axelor.auth.db.repo.UserRepository;
 import com.axelor.common.StringUtils;
-import com.axelor.db.tenants.TenantConfig;
 import com.axelor.db.tenants.TenantModule;
-import com.axelor.db.tenants.TenantResolver;
 import com.axelor.i18n.I18n;
 import com.axelor.mail.MailException;
 import com.axelor.mail.db.MailAddress;
@@ -35,19 +19,17 @@ import com.axelor.mail.db.MailMessage;
 import com.axelor.mail.service.MailService;
 import com.google.inject.Provider;
 import com.google.inject.persist.Transactional;
+import jakarta.inject.Inject;
+import jakarta.servlet.http.HttpServletRequest;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.text.MessageFormat;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Base64;
 import java.util.Objects;
 import java.util.UUID;
-import javax.annotation.Nullable;
-import javax.inject.Inject;
-import javax.servlet.http.HttpServletRequest;
 import org.apache.shiro.web.util.WebUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -210,7 +192,7 @@ public class AuthPasswordResetServiceImpl implements AuthPasswordResetService {
   protected String getMessage(String key) {
     final var message = I18n.get(key);
     if (Objects.equals(key, message)) {
-      throw new IllegalStateException(String.format("Missing translation for: %s", key));
+      throw new IllegalStateException("Missing translation for: %s".formatted(key));
     }
     return message;
   }
@@ -224,8 +206,7 @@ public class AuthPasswordResetServiceImpl implements AuthPasswordResetService {
   protected String createResetUrl(User user) {
     final var url =
         new StringBuilder()
-            .append(
-                String.format("%s/#/reset-password?token=%s", getBaseUrl(true), createToken(user)));
+            .append("%s/#/reset-password?token=%s".formatted(getBaseUrl(), createToken(user)));
     final var httpRequest = getHttpRequest();
     final var headerTenantId = httpRequest.getHeader("X-Tenant-ID");
 
@@ -299,53 +280,14 @@ public class AuthPasswordResetServiceImpl implements AuthPasswordResetService {
    *
    * @return the base URL
    */
-  protected String getBaseUrl(boolean trimSlash) {
-    var url =
-        settings.isProduction()
-            ? settings.get(AvailableAppSettings.APPLICATION_BASE_URL)
-            : settings.getBaseURL();
-    final var tenantId = TenantResolver.currentTenantIdentifier();
-
-    if (StringUtils.notBlank(tenantId)
-        && !Objects.equals(tenantId, TenantConfig.DEFAULT_TENANT_ID)) {
-      final var tenantBaseUrl = getTenantBaseUrl(tenantId);
-      if (StringUtils.notBlank(tenantBaseUrl)) {
-        url = tenantBaseUrl;
-      }
-    }
+  protected String getBaseUrl() {
+    var url = settings.getBaseURL();
 
     if (StringUtils.isBlank(url)) {
       throw new IllegalArgumentException("Application base URL is not set");
     }
 
-    if (trimSlash && url != null && url.endsWith("/")) {
-      url = url.substring(0, url.length() - 1);
-    }
-
     return url;
-  }
-
-  protected String getBaseUrl() {
-    return getBaseUrl(false);
-  }
-
-  @Nullable
-  protected String getTenantBaseUrl(String tenantId) {
-    final var hostsKey = String.format("db.%s.hosts", tenantId);
-    final var hostsValue = settings.get(hostsKey);
-    if (StringUtils.notBlank(hostsValue)) {
-      final var hosts = Arrays.asList(hostsValue.split("\\s*,\\s*"));
-      if (!hosts.isEmpty()) {
-        final var host = hosts.get(0);
-        if (StringUtils.notBlank(host)) {
-          final var httpRequest = getHttpRequest();
-          return String.format(
-              "%s://%s%s", httpRequest.getScheme(), host, httpRequest.getContextPath());
-        }
-      }
-    }
-
-    return null;
   }
 
   protected HttpServletRequest getHttpRequest() {
