@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.meta.loader;
 
@@ -41,10 +27,12 @@ import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
 import com.google.common.base.Suppliers;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Maps;
 import com.google.common.io.Resources;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBElement;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Marshaller;
+import jakarta.xml.bind.Unmarshaller;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.Reader;
@@ -52,6 +40,7 @@ import java.io.StringReader;
 import java.io.StringWriter;
 import java.io.Writer;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -60,11 +49,6 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.function.Supplier;
 import javax.xml.XMLConstants;
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBElement;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
-import javax.xml.bind.Unmarshaller;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
@@ -229,14 +213,14 @@ public class XMLViews {
     ObjectViews views = new ObjectViews();
     StringWriter writer = new StringWriter();
 
-    if (obj instanceof Action) {
-      views.setActions(ImmutableList.of((Action) obj));
+    if (obj instanceof Action action) {
+      views.setActions(List.of(action));
     }
-    if (obj instanceof AbstractView) {
-      views.setViews(ImmutableList.of((AbstractView) obj));
+    if (obj instanceof AbstractView view) {
+      views.setViews(List.of(view));
     }
-    if (obj instanceof List) {
-      views.setViews((List) obj);
+    if (obj instanceof List list) {
+      views.setViews(list);
     }
     try {
       marshal(views, writer);
@@ -260,9 +244,9 @@ public class XMLViews {
   }
 
   public static Map<String, Object> findViews(String model, Map<String, String> views) {
-    final Map<String, Object> result = Maps.newHashMap();
+    final Map<String, Object> result = new HashMap<>();
     if (views == null || views.isEmpty()) {
-      views = ImmutableMap.of("grid", "", "form", "");
+      views = Map.of("grid", "", "form", "");
     }
     for (Entry<String, String> entry : views.entrySet()) {
       final String type = entry.getKey();
@@ -355,7 +339,7 @@ public class XMLViews {
       return null;
     }
     try {
-      return unmarshal(view.getXml()).getViews().get(0);
+      return unmarshal(view.getXml()).getViews().getFirst();
     } catch (JAXBException e) {
       log.error(e.getMessage(), e);
       return null;
@@ -368,7 +352,7 @@ public class XMLViews {
       return null;
     }
     try {
-      return unmarshal(view.getXml()).getViews().get(0);
+      return unmarshal(view.getXml()).getViews().getFirst();
     } catch (JAXBException e) {
       log.error(e.getMessage(), e);
       return null;
@@ -457,7 +441,7 @@ public class XMLViews {
       }
 
       final ObjectViews objectViews = unmarshal(xml);
-      xmlView = objectViews.getViews().get(0);
+      xmlView = objectViews.getViews().getFirst();
     } catch (Exception e) {
       log.error(e.getMessage(), e);
       return null;
@@ -496,7 +480,7 @@ public class XMLViews {
     final MetaAction metaAction = Beans.get(MetaActionRepository.class).findByName(name);
     final Action action;
     try {
-      action = XMLViews.unmarshal(metaAction.getXml()).getActions().get(0);
+      action = XMLViews.unmarshal(metaAction.getXml()).getActions().getFirst();
       action.setActionId(metaAction.getId());
       return action;
     } catch (Exception e) {
