@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.meta.schema.actions;
 
@@ -35,18 +21,16 @@ import com.axelor.rpc.Context;
 import com.axelor.rpc.ContextEntity;
 import com.axelor.rpc.Response;
 import com.google.common.base.Joiner;
-import com.google.common.base.Objects;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
+import jakarta.xml.bind.annotation.XmlElement;
+import jakarta.xml.bind.annotation.XmlType;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import javax.xml.bind.annotation.XmlElement;
-import javax.xml.bind.annotation.XmlType;
+import java.util.Objects;
 
 @XmlType
 public class ActionGroup extends ActionResumable {
@@ -64,7 +48,7 @@ public class ActionGroup extends ActionResumable {
 
   public void addAction(String name) {
     if (this.actions == null) {
-      this.actions = Lists.newArrayList();
+      this.actions = new ArrayList<>();
     }
     ActionItem item = new ActionItem();
     item.setName(name);
@@ -80,16 +64,17 @@ public class ActionGroup extends ActionResumable {
       Action action = findAction(item.getName());
       if (action instanceof ActionReport && index < actions.size()) {
         String message =
-            String.format(
-                I18n.get("Invalid use of action-record: %s, must be the last action."),
-                action.getName());
+            I18n.get("Invalid use of action-record: %s, must be the last action.")
+                .formatted(action.getName());
         throw new IllegalStateException(message);
       }
     }
   }
 
   private String getPending(int index, String... prepend) {
-    final List<String> pending = Lists.newArrayList(prepend);
+    final List<String> pending = new ArrayList<>();
+    Collections.addAll(pending, prepend);
+
     if ((index + 1) < actions.size()) {
       String name = getName();
       if (StringUtils.isBlank(name)) { // dummy group
@@ -121,7 +106,7 @@ public class ActionGroup extends ActionResumable {
         view.setType(parts[0]);
         view.setName(parts[1]);
 
-        actionView.setViews(ImmutableList.of(view));
+        actionView.setViews(List.of(view));
         actionView.setName(actionName);
 
         if (parts.length == 3) {
@@ -159,8 +144,8 @@ public class ActionGroup extends ActionResumable {
       log.debug("continue action-validate: {}", actionName);
       log.debug("continue at: {}", index);
       Action action = MetaStore.getAction(actionName);
-      if (action instanceof ActionResumable) {
-        return ((ActionResumable) action).resumeAt(index);
+      if (action instanceof ActionResumable actionResumable) {
+        return actionResumable.resumeAt(index);
       }
       return action;
     }
@@ -185,7 +170,7 @@ public class ActionGroup extends ActionResumable {
     // validate the action group
     this.validate();
 
-    List<Object> result = Lists.newArrayList();
+    List<Object> result = new ArrayList<>();
     Iterator<ActionItem> iter = actions.iterator();
 
     if (StringUtils.notBlank(getName()) && !getName().matches("(.*)MenuTag\\((.*)\\)$")) {
@@ -210,7 +195,7 @@ public class ActionGroup extends ActionResumable {
           continue;
         }
         String pending = this.getPending(i);
-        Map<String, Object> res = Maps.newHashMap();
+        Map<String, Object> res = new HashMap<>();
         res.put(name, true);
         res.put("pending", pending);
         result.add(res);
@@ -235,8 +220,7 @@ public class ActionGroup extends ActionResumable {
       }
 
       Object value = action.wrap(handler);
-      if (value instanceof Response) {
-        Response res = (Response) value;
+      if (value instanceof Response res) {
         // if this is the only action then return the response
         if (res.getStatus() != Response.STATUS_SUCCESS || actions.size() == 1) {
           return res;
@@ -246,7 +230,7 @@ public class ActionGroup extends ActionResumable {
 
         // if error then concat the response result with result of previous actions and quit
         if (!ObjectUtils.isEmpty(res.getErrors())) {
-          Map<String, Object> resValues = Maps.newHashMap();
+          Map<String, Object> resValues = new HashMap<>();
           resValues.put("data", res.getItem(0));
           resValues.put("errors", res.getErrors());
 
@@ -264,26 +248,26 @@ public class ActionGroup extends ActionResumable {
       }
 
       // update the context if required
-      if (value instanceof Map) {
-        updateContext(handler, (Map) value);
+      if (value instanceof Map map) {
+        updateContext(handler, map);
       }
 
-      if (action instanceof ActionGroup && value instanceof Collection) {
-        result.addAll((Collection<?>) value);
+      if (action instanceof ActionGroup && value instanceof Collection<?> collection) {
+        result.addAll(collection);
       } else {
         result.add(value);
       }
 
       // stop for reload
-      if (value instanceof Map && Objects.equal(Boolean.TRUE, ((Map) value).get("reload"))) {
+      if (value instanceof Map map && Objects.equals(Boolean.TRUE, map.get("reload"))) {
         String pending = this.getPending(i);
         log.debug("wait for 'reload', pending actions: {}", pending);
         ((Map<String, Object>) value).put("pending", pending);
         break;
       }
 
-      if (action instanceof ActionValidate && value instanceof Map) {
-        String validate = (String) ((Map) value).get("pending");
+      if (action instanceof ActionValidate && value instanceof Map map) {
+        String validate = (String) map.get("pending");
         String pending = this.getPending(i, validate);
         log.debug("wait for validation: {}, {}", name, value);
         log.debug("pending actions: {}", pending);
@@ -292,8 +276,7 @@ public class ActionGroup extends ActionResumable {
       }
 
       if (action instanceof ActionCondition) {
-        if (Objects.equal(value, Boolean.FALSE)
-            || (value instanceof Map && hasErrors((Map) value))) {
+        if (Objects.equals(value, Boolean.FALSE) || (value instanceof Map map && hasErrors(map))) {
           break;
         }
       }
@@ -303,11 +286,11 @@ public class ActionGroup extends ActionResumable {
           && iter.hasNext()) {
         Map<String, Object> last = null;
         try {
-          last = (Map) result.get(result.size() - 1);
+          last = (Map) result.getLast();
         } catch (ClassCastException e) {
         }
         if (last == null) continue;
-        if (Objects.equal(Boolean.TRUE, last.get("reload"))
+        if (Objects.equals(Boolean.TRUE, last.get("reload"))
             || last.containsKey(Info.KEY)
             || last.containsKey(Alert.KEY)
             || last.containsKey(Error.KEY)
@@ -332,9 +315,9 @@ public class ActionGroup extends ActionResumable {
     if (ObjectUtils.isEmpty(value)) return Boolean.FALSE;
 
     Object errors = value.get("errors");
-    if (errors instanceof Map) {
-      for (Object key : ((Map) errors).keySet()) {
-        String error = (String) ((Map) errors).get(key);
+    if (errors instanceof Map map) {
+      for (Object key : map.keySet()) {
+        String error = (String) map.get(key);
         if (!StringUtils.isEmpty(error)) {
           return Boolean.TRUE;
         }
@@ -351,8 +334,8 @@ public class ActionGroup extends ActionResumable {
     Object values = value.get("values");
     final Map<String, Object> map;
 
-    if (values instanceof ContextEntity) {
-      map = ((ContextEntity) values).getContextMap();
+    if (values instanceof ContextEntity contextEntity) {
+      map = contextEntity.getContextMap();
     } else if (values instanceof Model) {
       map = Mapper.toMap(value);
     } else if (values instanceof Map) {
@@ -371,10 +354,10 @@ public class ActionGroup extends ActionResumable {
 
     values = value.get("attrs");
 
-    if (values instanceof Map) {
-      for (Object key : ((Map) values).keySet()) {
+    if (values instanceof Map valuesMap) {
+      for (Object key : valuesMap.keySet()) {
         String name = key.toString();
-        Map attrs = (Map) ((Map) values).get(key);
+        Map attrs = (Map) valuesMap.get(key);
         if (name.indexOf('$') == 0) name = name.substring(1);
         if (attrs.containsKey("value")) {
           map.put(name, attrs.get("value"));
