@@ -1,27 +1,14 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.tomcat;
 
+import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class TomcatOptions {
@@ -30,7 +17,13 @@ public class TomcatOptions {
 
   private String contextPath = "/";
 
+  private URI proxyUrl;
+
   private Path baseDir;
+
+  private int maxThreads;
+
+  private int cacheMaxSize = 100 * 1024; // 100M
 
   private List<Path> roots = new ArrayList<>();
 
@@ -73,22 +66,46 @@ public class TomcatOptions {
     return contextPath;
   }
 
+  public URI getProxyUrl() {
+    return proxyUrl;
+  }
+
+  public void setProxyUrl(URI proxyUrl) {
+    this.proxyUrl = proxyUrl;
+  }
+
   public void setContextPath(String contextPath) {
-    String context = contextPath == null ? "" : contextPath.trim();
-    if (context.equals("/") || context.isEmpty()) {
-      context = "";
-    } else if (context.charAt(0) != '/')  {
-      context = "/" + context;
-    }
+    String context =
+        Optional.ofNullable(contextPath)
+            .map(String::trim)
+            .map(x -> x.startsWith("/") ? x : "/" + x)
+            .map(x -> x.equals("/") ? "" : x)
+            .orElse("");
     this.contextPath = context;
   }
 
   public Path getBaseDir() {
-    return baseDir == null ? Paths.get("build/tomcat") : baseDir;
+    return baseDir == null ? Path.of("build/tomcat") : baseDir;
   }
 
   public void setBaseDir(Path baseDir) {
     this.baseDir = baseDir;
+  }
+
+  public int getMaxThreads() {
+    return maxThreads;
+  }
+
+  public void setMaxThreads(int maxThreads) {
+    this.maxThreads = maxThreads;
+  }
+
+  public int getCacheMaxSize() {
+    return cacheMaxSize;
+  }
+
+  public void setCacheMaxSize(int cacheMaxSize) {
+    this.cacheMaxSize = cacheMaxSize;
   }
 
   public List<Path> getRoots() {
@@ -104,7 +121,7 @@ public class TomcatOptions {
   }
 
   public Path getDocBase() {
-    return roots.isEmpty() ? Paths.get("src/main/webapp") : roots.get(0);
+    return roots.isEmpty() ? Path.of("src/main/webapp") : roots.getFirst();
   }
 
   public List<Path> getExtraResources() {
