@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.web.service;
 
@@ -58,13 +44,20 @@ import com.axelor.rpc.Request;
 import com.axelor.rpc.Response;
 import com.axelor.script.ScriptBindings;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import com.google.inject.Inject;
 import com.google.inject.servlet.RequestScoped;
 import io.swagger.v3.oas.annotations.Hidden;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.MultivaluedMap;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -77,15 +70,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.MultivaluedMap;
 
 @RequestScoped
 @Consumes(MediaType.APPLICATION_JSON)
@@ -115,7 +99,7 @@ public class ViewService extends AbstractService {
   public Response models() {
 
     final Response response = new Response();
-    final List<String> all = Lists.newArrayList();
+    final List<String> all = new ArrayList<>();
 
     for (Class<?> cls : JPA.models()) {
       if (security.isPermitted(AccessType.READ, (Class) cls)) {
@@ -141,7 +125,7 @@ public class ViewService extends AbstractService {
   public Response fields(
       @PathParam("model") String model, @QueryParam("jsonModel") String jsonModel) {
     final Response response = new Response();
-    final Map<String, Object> meta = Maps.newHashMap();
+    final Map<String, Object> meta = new HashMap<>();
     final Class<?> modelClass = findClass(model);
 
     if (!security.isPermitted(AccessType.READ, (Class) modelClass)) {
@@ -149,8 +133,8 @@ public class ViewService extends AbstractService {
       return response;
     }
 
-    final Map<String, Object> jsonFields = Maps.newHashMap();
-    final List<String> names = Lists.newArrayList();
+    final Map<String, Object> jsonFields = new HashMap<>();
+    final List<String> names = new ArrayList<>();
 
     meta.put("model", model);
     meta.put("jsonFields", jsonFields);
@@ -182,7 +166,7 @@ public class ViewService extends AbstractService {
   @Hidden
   public Response views(@PathParam("model") String model) {
     final MultivaluedMap<String, String> params = getUriInfo().getQueryParameters(true);
-    final Map<String, String> views = Maps.newHashMap();
+    final Map<String, String> views = new HashMap<>();
     for (String mode : params.keySet()) {
       views.put(mode, params.getFirst(mode));
     }
@@ -191,18 +175,17 @@ public class ViewService extends AbstractService {
 
   private Set<String> findNames(final Set<String> names, final AbstractWidget widget) {
     List<? extends AbstractWidget> all = null;
-    if (widget instanceof SimpleContainer) {
-      all = ((SimpleContainer) widget).getItems();
-    } else if (widget instanceof Panel) {
-      all = ((Panel) widget).getItems();
-    } else if (widget instanceof PanelTabs) {
-      all = ((PanelTabs) widget).getItems();
-    } else if (widget instanceof PanelInclude) {
-      names.addAll(findNames(((PanelInclude) widget).getView()));
-    } else if (widget instanceof Field) {
-      names.add(((Field) widget).getName());
-      if (widget instanceof PanelField) {
-        PanelField field = (PanelField) widget;
+    if (widget instanceof SimpleContainer container) {
+      all = container.getItems();
+    } else if (widget instanceof Panel panel) {
+      all = panel.getItems();
+    } else if (widget instanceof PanelTabs tabs) {
+      all = tabs.getItems();
+    } else if (widget instanceof PanelInclude include) {
+      names.addAll(findNames(include.getView()));
+    } else if (widget instanceof Field fieldWidget) {
+      names.add(fieldWidget.getName());
+      if (widget instanceof PanelField field) {
         if (field.getEditor() != null && field.getTarget() == null) {
           all = field.getEditor().getItems();
         }
@@ -214,23 +197,23 @@ public class ViewService extends AbstractService {
         }
       }
       // include related field for ref-select widget
-      String relatedAttr = ((Field) widget).getRelated();
+      String relatedAttr = fieldWidget.getRelated();
       if (StringUtils.notBlank(relatedAttr)) {
         names.add(relatedAttr);
       }
-    } else if (widget instanceof PanelRelated) {
-      names.add(((PanelRelated) widget).getName());
+    } else if (widget instanceof PanelRelated panelRelated) {
+      names.add(panelRelated.getName());
     }
 
-    if (widget instanceof SimpleWidget) {
-      String depends = ((SimpleWidget) widget).getDepends();
+    if (widget instanceof SimpleWidget simpleWidget) {
+      String depends = simpleWidget.getDepends();
       if (StringUtils.notBlank(depends)) {
         Collections.addAll(names, depends.trim().split("\\s*,\\s*"));
       }
     }
 
-    if (widget instanceof MenuItem) {
-      String depends = ((MenuItem) widget).getDepends();
+    if (widget instanceof MenuItem menuItem) {
+      String depends = menuItem.getDepends();
       if (StringUtils.notBlank(depends)) {
         Collections.addAll(names, depends.trim().split("\\s*,\\s*"));
       }
@@ -249,8 +232,7 @@ public class ViewService extends AbstractService {
     final Set<String> names = new HashSet<>();
     final List<AbstractWidget> items = new ArrayList<>();
 
-    if (view instanceof ContainerView) {
-      final ContainerView containerView = (ContainerView) view;
+    if (view instanceof ContainerView containerView) {
       items.addAll(Optional.ofNullable(containerView.getItems()).orElse(Collections.emptyList()));
       items.addAll(containerView.getExtraItems());
       names.addAll(containerView.getExtraNames());
@@ -279,11 +261,11 @@ public class ViewService extends AbstractService {
     final Response response = service.findView(model, name, type);
     final AbstractView view = (AbstractView) response.getData();
 
-    final Map<String, Object> data = Maps.newHashMap();
+    final Map<String, Object> data = new HashMap<>();
     data.put("view", view);
 
-    if (view instanceof Search && ((Search) view).getSearchForm() != null) {
-      String searchForm = ((Search) view).getSearchForm();
+    if (view instanceof Search search && search.getSearchForm() != null) {
+      String searchForm = search.getSearchForm();
       Response searchResponse = service.findView(null, searchForm, "form");
       data.put("searchForm", searchResponse.getData());
     }
@@ -304,7 +286,7 @@ public class ViewService extends AbstractService {
         names.add("attrs");
       }
 
-      final Map<String, Object> jsonFieldsMap = Maps.newHashMap();
+      final Map<String, Object> jsonFieldsMap = new HashMap<>();
       for (Property jsonField : jsonFields) {
         Map<String, Object> jsonFieldMap =
             MetaJsonRecord.class.getName().equals(model) && ObjectUtils.notEmpty(jsonModel)
@@ -452,17 +434,29 @@ public class ViewService extends AbstractService {
     for (Object item : (List<?>) json.get("items")) {
       @SuppressWarnings("unchecked")
       final Map<Object, Object> map = (Map<Object, Object>) item;
-      final String type = (String) map.get("type");
-      if ("field".equals(type) || "button".equals(type)) {
-        final Class<?> itemType = "field".equals(type) ? PanelField.class : Button.class;
+      final String jsonField = (String) map.get("jsonField");
+
+      String type = (String) map.get("type");
+      final boolean isButton = "button".equals(type);
+
+      if (StringUtils.notBlank(jsonField) && !isButton && !"field".equals(type)) {
+        type = "field";
+        map.put("type", type);
+      }
+
+      if (isButton || "field".equals(type)) {
+        final Class<?> itemType = isButton ? Button.class : PanelField.class;
         final String name = (String) map.get("name");
-        if (StringUtils.notBlank(name)) {
+
+        if (StringUtils.notBlank(name) && !names.contains(name)) {
           names.add(name);
+        } else {
+          continue;
         }
 
         final List<SimpleWidget> existing =
             view.getItems().stream()
-                .filter(widget -> widget instanceof SimpleWidget)
+                .filter(SimpleWidget.class::isInstance)
                 .map(SimpleWidget.class::cast)
                 .filter(widget -> Objects.equals(widget.getName(), name))
                 .collect(Collectors.toList());
@@ -485,7 +479,7 @@ public class ViewService extends AbstractService {
             stream = Stream.concat(stream, filterView.getItems().stream());
           }
           stream
-              .filter(widget -> widget instanceof SimpleWidget)
+              .filter(SimpleWidget.class::isInstance)
               .map(SimpleWidget.class::cast)
               .filter(widget -> Objects.equals(widget.getName(), name))
               .filter(widget -> StringUtils.notBlank(widget.getTitle()))
@@ -505,7 +499,7 @@ public class ViewService extends AbstractService {
     // Add missing fields as hidden
     if (originalView != null) {
       originalView.getItems().stream()
-          .filter(widget -> widget instanceof SimpleWidget)
+          .filter(SimpleWidget.class::isInstance)
           .map(SimpleWidget.class::cast)
           .filter(widget -> StringUtils.notBlank(widget.getName()))
           .filter(widget -> !names.contains(widget.getName()))
@@ -514,6 +508,29 @@ public class ViewService extends AbstractService {
                 widget.setHidden(true);
                 items.add(widget);
               });
+    }
+
+    // Hide attrs
+    var model = (String) json.get("model");
+    if (StringUtils.notBlank(model)) {
+      var modelClass = findClass(model);
+      var mapper = Mapper.of(modelClass);
+      var property = mapper.getProperty("attrs");
+      if (property != null && property.isJson()) {
+        items.stream()
+            .filter(SimpleWidget.class::isInstance)
+            .map(SimpleWidget.class::cast)
+            .filter(widget -> Objects.equals(widget.getName(), property.getName()))
+            .findAny()
+            .ifPresentOrElse(
+                widget -> widget.setHidden(true),
+                () -> {
+                  var widget = new PanelField();
+                  widget.setName(property.getName());
+                  widget.setHidden(true);
+                  items.add(widget);
+                });
+      }
     }
 
     view.setCustomViewShared((Boolean) json.get("customViewShared"));
@@ -527,13 +544,13 @@ public class ViewService extends AbstractService {
   @Hidden
   public Response chart(@PathParam("name") String name) {
     final MultivaluedMap<String, String> params = getUriInfo().getQueryParameters(true);
-    final Map<String, Object> context = Maps.newHashMap();
+    final Map<String, Object> context = new HashMap<>();
     final Request request = new Request();
 
     for (String key : params.keySet()) {
       List<String> values = params.get(key);
       if (values.size() == 1) {
-        context.put(key, values.get(0));
+        context.put(key, values.getFirst());
       } else {
         context.put(key, values);
       }
@@ -603,15 +620,15 @@ public class ViewService extends AbstractService {
 
     Object res = act.execute(handler);
 
-    if (res instanceof ActionResponse) {
-      res = ((ActionResponse) res).getItem(0);
-      if (res instanceof Map && ((Map) res).containsKey("view")) {
-        res = ((Map) res).get("view");
+    if (res instanceof ActionResponse response) {
+      res = response.getItem(0);
+      if (res instanceof Map map && map.containsKey("view")) {
+        res = map.get("view");
       }
     }
 
-    if (res instanceof Map) {
-      Map<String, Object> ctx = (Map) ((Map) res).get("context");
+    if (res instanceof Map map) {
+      Map<String, Object> ctx = (Map) map.get("context");
       if (ctx != null) {
         domainContext.putAll(ctx);
       }
